@@ -4,6 +4,7 @@
             "snippets": [
                 {
                     "name": "cbHasFields",
+                    "description": "This is a copy of the original cbHasField snippet that ships with ContentBlocks. The only difference is that it takes in a comma separate list of IDs, instead of just 1.",
                     "category": "f_contentblocks"
                 },{
                     "name": "cbRenderCodeField",
