@@ -4,7 +4,7 @@
  *
  */
 
-$assetsPathJS = $modx->getOption('romanesco.custom_js_path');
+$assetsPathJS = $modx->getOption('romanesco.custom_js_path', $scriptProperties, '');
 
 // Footer
 $modx->regClientScript($assetsPathJS . '/tablesort.js');
