@@ -5,7 +5,7 @@
  * Create tab buttons based on the tab content's HTML.
  * Each content field contains data attributes with the correct text for each heading.
  *
- * Many thanks to @christianseel for coming up with the original idea and code!
+ * Many thanks to @christianseel for the original idea and code.
  */
 
 $doc = new DOMDocument();
